--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,3 +1,5 @@
 # Modules
 ":floppy_disk: sfn-state-machine":
-- modules/sfn-state-machine/**/*
+- changed-files:
+  - any-glob-to-any-file:
+    - modules/sfn-state-machine/**/*
